  - [26 Jul 00] Added small icon in personal page to indicate sex
    (Louis Granboulan's idea)
  - [19 Jul 00] Fixed bug in places/surnames displaying: some identical
    places and surnames could be displayed several times.

* Gedcom to GeneWeb (ged2gwb)
  - [26 Jul 00] Added a lock to the data base before writing it (to avoid
    multiple accesses which risk to damage it).

* Lexicon (lang/lexicon.txt) and welcome pages (lang/*/start.txt)
  - [21 Jul 00] In lexicon: added the terms "Sosa"; changed "list" into
    "list/list (ancestors)" (specially for better translation in Swedish)
  - [18 Jul 00] Fixed Esperanto version (Thomas Ailleret).

* Documentation:
  - [21 Jul 00] Documentation updates in Swedish (Lars Gustavsson)

GeneWeb version 3.06
--------------------

* Languages
  - [20 Jun 00] Added Latvian (Janeks Kamerovskis).

* Setup program (gwsetup)
  - [20 Jun 00] Added Latvian version (Janeks Kamerovskis).

* GeneWeb Service/CGI (gwd)
  - [04 Jul 00] Put all statitics in a different page (accessible only
    to "wizards" and "friends").
  - [04 Jul 00] Added the computation of the persons who lived the longest.
  - [27 Jun 00] When typing a name holding a number, searches also with
    its equivalent in Roman digits (e.g. it is possible to type "Louis 15"
    to find "Louis XV").
  - [26 Jun 00] Fixed bug: the images in ".png" format were not accepted.
  - [23 Jun 00] Added descendants displaying with d'Aboville's encoding.
  - [21 Jun 00] Added displaying of oldest perhaps still alive (from welcome
    page).
  - [20 Jun 00] Changed displaying of marriage witnesses in personal pages.
  - [20 Jun 00] Together with the link to the welcome page (up arrow), added
    a link to the referer page (left arrow).
  - [19 Jun 00] Changed page design of relationship computing.
  - [19 Jun 00] In latest marriages, display now only true marriages (i.e.
    not "relations" nor "engagements").
  - [18 Jun 00] Added a link in bottom of welcome pages, useful if you