@@ -1,5 +1,5 @@
 (* camlp4r *)
-(* $Id: setup.ml,v 3.13 2000-07-25 15:40:24 ddr Exp $ *)
+(* $Id: setup.ml,v 3.14 2000-07-28 13:07:48 ddr Exp $ *)
 
 value port = ref 2316;
 value default_lang = ref "en";
@@ -1006,7 +1006,8 @@ value gwf_1 conf =
        | Some x -> x ]
      in
      do Printf.fprintf oc "# File generated by \"setup\"\n\n";
-        Printf.fprintf oc "body_prop=%s\n" body_prop;
+        if body_prop = "" then ()
+        else Printf.fprintf oc "body_prop=%s\n" body_prop;
         Printf.fprintf oc "default_lang=%s\n"
           (s_getenv conf.env "default_lang");
         Printf.fprintf oc "friend_passwd=%s\n"
